# rules_rust

./: .bazelrc  MODULE.bazel
test/vscode/: vscode_test_runner.sh
util/process_wrapper/: BUILD.bazel  static_transition.bzl
util/process_wrapper/private/: BUILD.bazel  bootstrap_process_wrapper.cc
