"""bazelbuild/rules_rust"""

module(
    name = "rules_rust",
    version = "0.70.0",
)

###############################################################################
## Core
###############################################################################

bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_features", version = "1.32.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "protobuf", version = "28.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "apple_support", version = "1.24.1")
bazel_dep(name = "llvm", version = "0.7.7")

###############################################################################
## Compatibility
###############################################################################

bazel_dep(name = "rules_rs", version = "0.0.82")

osx = use_extension("@llvm//extensions:osx.bzl", "osx")
use_repo(osx, "macos_sdk")

internal_deps = use_extension("//rust/private:internal_extensions.bzl", "i")
use_repo(
    internal_deps,
    "rules_rust_tinyjson",
)

rust = use_extension("//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)

rules_rs_toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains", dev_dependency = True)
rules_rs_toolchains.toolchain(name = "default_rust_toolchains")
use_repo(rules_rs_toolchains, "default_rust_toolchains")

register_toolchains(
    "@default_rust_toolchains//:all",
    dev_dependency = True,
)

rust_host_tools = use_extension("//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools",
)
use_repo(
    rust_host_tools,
    "rust_host_tools",
)

rust_test = use_extension("//test:test_extensions.bzl", "rust_test", dev_dependency = True)
use_repo(
    rust_test,
    "buildkite_config",
    "generated_inputs_in_external_repo",
    "libc",
    "rrtd__anyhow-1.0.100",
    "rrtd__blake3-1.8.2",
    "rrtd__clap-4.5.50",
    "rrtd__serde-1.0.228",
    "rrtd__serde_json-1.0.145",
    "rrtd__tempfile-3.23.0",
    "rrtd__tokio-1.48.0",
    "rrtd__tracing-0.1.41",
    "rrtd__tracing-subscriber-0.3.20",
    "rrtd__walkdir-2.5.0",
    "rtra__serde-1.0.228",
    "rtra__serde_json-1.0.149",
    "rtvsc__serde-1.0.228",
    "rtvsc__serde_json-1.0.149",
    "rules_rust_toolchain_test_target_json",
)

bazel_dep(name = "rules_testing", version = "0.7.0", dev_dependency = True)
bazel_dep(name = "bazel_ci_rules", version = "1.0.0", dev_dependency = True)
