load("//util/process_wrapper:static_transition.bzl", "static_process_wrapper")

# buildifier: disable=bzl-visibility
load("//rust/private:rust.bzl", "rust_binary_without_process_wrapper", "rust_test_without_process_wrapper_test")

rust_binary_without_process_wrapper(
    name = "process_wrapper_impl",
    srcs = glob(["*.rs"]),
    allocator_libraries = select({
        "@rules_rust//rust/settings:experimental_use_allocator_libraries_with_mangled_symbols_on": "@rules_rust//ffi/rs:allocator_libraries_with_mangling_support_without_process_wrapper",
        "//conditions:default": "@rules_rust//ffi/rs:empty_allocator_libraries",
    }),
    edition = "2018",
    # To ensure the process wrapper is produced deterministically
    # debug info, which is known to sometimes have host specific
    # paths embedded in this section, is stripped out. On macOS,
    # full symbol stripping is needed to also remove N_OSO stab
    # entries whose timestamps vary between builds.
    rustc_flags = select({
        "@platforms//os:linux": ["-Cstrip=debuginfo"],
        "@platforms//os:macos": ["-Cstrip=symbols"],
        "@platforms//os:windows": ["-Cstrip=debuginfo"],
        "//conditions:default": [],
    }),
    target_compatible_with = select({
        "@rules_rust//rust/private:bootstrapping": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@rules_rust_tinyjson//:tinyjson",
    ],
)

# Wrap process_wrapper_impl with a platform transition to the linux-musl
# target, producing a fully static binary safe to remote-cache across glibc
# versions. The transition is applied only to this target; proc-macros and
# other exec-platform Rust builds are unaffected.
static_process_wrapper(
    name = "process_wrapper",
    binary = ":process_wrapper_impl",
    visibility = ["//visibility:public"],
)

rust_test_without_process_wrapper_test(
    name = "process_wrapper_test",
    crate = ":process_wrapper_impl",
    edition = "2018",
)

alias(
    name = "bootstrap_process_wrapper",
    actual = "//util/process_wrapper/private:bootstrap_process_wrapper",
    visibility = ["//visibility:public"],
)
